--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "orbital-meteoroid",
+  "name": "mentis-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "An Agentic, Multi-Model CLI Coding Assistant",
   "main": "index.js",
   "bin": {
     "mentis": "./dist/index.js"
@@ -11,8 +11,15 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "cli",
+    "ai",
+    "agent",
+    "gemini",
+    "ollama",
+    "mcp"
+  ],
+  "author": "CoderVLSI",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
