--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "dotenv": "^17.2.3",
+    "duck-duck-scrape": "^2.2.7",
     "figlet": "^1.9.4",
     "fs-extra": "^11.3.2",
+    "google-sr": "^6.0.0",
     "gradient-string": "^3.0.0",
     "inquirer": "^13.1.0",
     "ora": "^9.0.0"
